[gd_scene load_steps=2 format=3 uid="uid://dpnoewu33itlq"]

[ext_resource type="Script" uid="uid://fve8k1ikomkc" path="res://scripts/ChallengeHub.gd" id="1_c46x6"]

[node name="ChallengeHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c46x6")

[node name="BackgroundLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackgroundGradient" type="ColorRect" parent="BackgroundLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.1, 0.2, 1)

[node name="BackgroundPattern" type="ColorRect" parent="BackgroundLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.08, 0.15, 0.25, 0.3)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 20.0
offset_right = -30.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Title" type="Label" parent="MainContainer/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 36
text = "üè™ CHALLENGE HUB"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MainContainer/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Unlock new cards by completing challenges"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="MainContainer/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Collection: 0/0 bundles unlocked"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BundlesPanel" type="Panel" parent="MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BundlesPanelBG" type="ColorRect" parent="MainContainer/ContentContainer/BundlesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.18, 0.9)

[node name="BundlesScrollContainer" type="ScrollContainer" parent="MainContainer/ContentContainer/BundlesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="BundlesGrid" type="GridContainer" parent="MainContainer/ContentContainer/BundlesPanel/BundlesScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="AIContainer" type="Control" parent="MainContainer/ContentContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="AIPanel" type="Panel" parent="MainContainer/ContentContainer/AIContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AIPanelBG" type="ColorRect" parent="MainContainer/ContentContainer/AIContainer/AIPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.1, 0.15, 0.9)

[node name="AIContent" type="VBoxContainer" parent="MainContainer/ContentContainer/AIContainer/AIPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="AITitle" type="Label" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "THE CURATOR (AI)"
horizontal_alignment = 1

[node name="AISeparator" type="HSeparator" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent"]
layout_mode = 2

[node name="AICharacterContainer" type="Control" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="AIAvatar" type="Label" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent/AICharacterContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -51.5
offset_right = 51.5
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 75
text = "ü§ñ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AIDialogContainer" type="VBoxContainer" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="DialogBubble" type="Control" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent/AIDialogContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3

[node name="DialogPointer" type="Polygon2D" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent/AIDialogContainer/DialogBubble"]
position = Vector2(135, 11)
color = Color(0.454902, 0.0784314, 0.14902, 0.94902)
polygon = PackedVector2Array(0, 0, -15, -15, 15, -15)
uv = PackedVector2Array(0, 0, -15, -15, 15, -15)

[node name="DialogBox" type="Panel" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent/AIDialogContainer/DialogBubble"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.066
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0179996
grow_horizontal = 2
grow_vertical = 2

[node name="DialogBG" type="ColorRect" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent/AIDialogContainer/DialogBubble/DialogBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.08, 0.15, 0.95)

[node name="DialogBorder" type="ColorRect" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent/AIDialogContainer/DialogBubble/DialogBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.7, 1, 0.6)

[node name="DialogInner" type="ColorRect" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent/AIDialogContainer/DialogBubble/DialogBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.08, 0.15, 0.95)

[node name="DialogText" type="Label" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent/AIDialogContainer/DialogBubble/DialogBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.95, 1, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TypingIndicator" type="Label" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent/AIDialogContainer/DialogBubble/DialogBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 0.8, 1, 0.8)
theme_override_font_sizes/font_size = 24
text = "..."
horizontal_alignment = 2
vertical_alignment = 2

[node name="StatusLight" type="ColorRect" parent="MainContainer/ContentContainer/AIContainer/AIPanel/AIContent/AIDialogContainer/DialogBubble/DialogBox"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = 7.0
offset_right = -7.0
offset_bottom = 15.0
grow_horizontal = 0
color = Color(0.2, 0.8, 0.4, 0.8)

[node name="Spacer2" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="BackButton" type="Button" parent="MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚¨ÖÔ∏è BACK"

[node name="Spacer3" type="Control" parent="MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="RefreshButton" type="Button" parent="MainContainer/ButtonsContainer"]
visible = false
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "REFRESH"

[node name="Spacer4" type="Control" parent="MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="DebugButton" type="Button" parent="MainContainer/ButtonsContainer"]
visible = false
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üîì DEBUG"

[node name="AudioManager" type="Node" parent="."]

[node name="UIPlayer" type="AudioStreamPlayer" parent="AudioManager"]
volume_db = -5.0

[node name="HoverPlayer" type="AudioStreamPlayer" parent="AudioManager"]
volume_db = -12.0
